src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(api/.*)
        backend:
          serviceName: api-service
          servicePort: 8080
      - path: /(.*)
        backend:
          serviceName: web-service
          servicePort: 3000
